- Fix Bug #53782 (foreach throws irrelevant exception)